--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.11.0'
+    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.11.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
